# public-data-portal

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  git-usage.md  pyproject.toml
.github/workflows/: lint.yml
apps/accounts/: admin.py  models.py
apps/accounts/migrations/: 0001_initial.py
apps/catalog/: admin.py  models.py  views.py
apps/catalog/migrations/: 0001_initial.py  0002_alter_datasetfile_file_type.py  0003_alter_datasetfile_file_type.py  0004_alter_datasetfile_file_type.py  0005_alter_datasetfile_file_type.py  0006_alter_datasetfile_file_type.py  0007_alter_datasetfile_file_type.py  0008_alter_datasetfile_file_type.py  0009_alter_datasetfile_file_type.py  0010_alter_datasetfile_file_type.py  0011_alter_datasetfile_file_type.py  0012_alter_datasetfile_file_type.py  0013_alter_dataset_quality_score.py  0013_dataset_scraper.py  0014_alter_dataset_quality_score.py  (+10 more)
apps/ugc/: admin.py  apps.py  models.py
config/: asgi.py  settings.py  urls.py  wsgi.py
docs/: common-commands.md  contributing.md  decisions.md  git-usage.md  planning.md
ingestion/: data_models.py  oecd.py  utils.py
ingestion/ca/: open_gov_canada.py
ingestion/us/: cary_nc.py  chicago.py  nyc.py
static/css/: main.css
static/root/: robots.txt
templates/: about.html  base.html  dataset_detail.html  homepage.html  index.html  search.html
templates/account/: README  account_inactive.html  base.html  base_confirm_code.html  confirm_email_verification_code.html  confirm_login_code.html  login.html  logout.html  request_login_code.html  signup.html
(+9 files in other folders)
