[project]
name = "data-portal"
version = "0.1.0"
description = "An OK starting place for Django projects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "careful>=0.3.1",
    "django>=5.2,<6",
    "django-allauth[mfa]>=65.7.0",
    "django-debug-toolbar>=5.1.0",
    "django-environ>=0.12.0,<1",
    "django-structlog>=9.1.0,<10",
    "django-typer>=3.1.0,<4",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic>=2.11.7",
    "pytest-django>=4.11.1,<5",
    "python-dateutil>=2.9.0.post0",
    "rich>=14.0.0",
    "ruff>=0.11.4",
    "whitenoise>=6.9.0,<7",
    "whsk>=0.2.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors - handles basic Python style
  "W", # pycodestyle warnings - handles whitespace issues
  "F", # pyflakes - handles unused imports and variables
  "N", # pep8-naming - handles naming conventions
]
ignore = [
  "F401", # allow unused imports (useful for assignments)
  "N818",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
